[tool.poetry]
name = "repl_python3_ILoveSchool"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^3.141.0"
dhooks = "^1.1.4"
guilded-webhook = "^0.1.1"
bs4 = "^0.0.1"
pyarmor = "^6.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
